# xv6-Operating-System-Login

./: .clang-format  .editorconfig  CMakeLists.txt  README.md  login_design.md
bootblock/: bootmain.c
include/: elf.h  fcntl.h  fs.h  lab4_ag.h  memlayout.h  mmu.h  param.h  stat.h  syscall.h  types.h
kernel/: Sources.cmake
kernel/include/: defs.h  file.h  kbd.h  mp.h  proc.h  spinlock.h
kernel/src/: bio.c  console.c  exec.c  file.c  fs.c  ide.c  ioapic.c  kalloc.c  kbd.c  lab4_ag.c  lapic.c  log.c  main.c  memide.c  mp.c  picirq.c  pipe.c  proc.c  sleeplock.c  spinlock.c  string.c  syscall.c  sysfile.c  sysproc.c  trap.c  uart.c  vm.c
scripts/: hash.py  login-xv6-qemu  submit.json  submit.py  submit.sh
tools/: mkfs.c
user/: CMakeLists.txt  Sources.cmake
user/asm/: usys.S
user/include/: crypto.h  login.h  user.h
user/include/crypto/: aes256.h  sha256.h
user/src/: cat.c  forktest.c  grep.c  init.c  kill.c  ls.c  printf.c  sh.c  stressfs.c  ulib.c  umalloc.c  usertests.c  wc.c  zombie.c
user/src/crypto/: aes256.c  sha256.c
user/src/crypto/test/: test_aes256.c  test_sha256.c
user/src/login/: login.c  login_init.c  login_lib.c
